--- a/yizu/Home/HomeDetail/view/HomeDetailCell.xib
+++ b/yizu/Home/HomeDetail/view/HomeDetailCell.xib
@@ -33,42 +33,44 @@
                         <rect key="frame" x="213.5" y="219.5" width="106.5" height="79.5"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zI0-Ze-erR">
-                        <rect key="frame" x="33" y="23" width="45" height="45"/>
+                        <rect key="frame" x="23" y="23" width="45" height="45"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="45" id="1ew-e2-8gL"/>
                             <constraint firstAttribute="height" constant="45" id="5Tu-w5-bHJ"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJs-NM-ewf">
-                        <rect key="frame" x="106" y="28" width="40" height="18"/>
+                        <rect key="frame" x="96" y="28" width="40" height="18"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oz0-mk-oeC">
-                        <rect key="frame" x="106" y="51" width="28.5" height="13.5"/>
+                        <rect key="frame" x="96" y="51" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商家简介" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ws-Un-PvV">
-                        <rect key="frame" x="33" y="88" width="73.5" height="21"/>
+                        <rect key="frame" x="23" y="88" width="73.5" height="21"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="         三大繁华路口发生的风景还是空间的发挥空间啊收到回复繁华路口发生的风景还是空间的发挥空间啊收到回复繁华路口发生的风景还是空间的发挥空间啊收到回复" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igT-H7-vgE">
-                        <rect key="frame" x="33" y="119" width="262" height="90"/>
+                        <rect key="frame" x="23" y="119" width="282" height="90"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oUx-tP-adx" customClass="favoriteBtn">
-                        <rect key="frame" x="215" y="28" width="30" height="34"/>
+                        <rect key="frame" x="205" y="28" width="30" height="24"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DVm-Bo-eyA" customClass="CellBtn">
-                        <rect key="frame" x="260" y="28" width="30" height="34"/>
-                        <color key="backgroundColor" red="1" green="0.35085847380000001" blue="0.32540104549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="250" y="28" width="60" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="cFm-ed-fpS"/>
+                        </constraints>
                     </button>
                 </subviews>
                 <constraints>
@@ -79,11 +81,11 @@
                     <constraint firstItem="QJs-NM-ewf" firstAttribute="leading" secondItem="zI0-Ze-erR" secondAttribute="trailing" constant="28" id="96p-DD-Yaf"/>
                     <constraint firstItem="DVm-Bo-eyA" firstAttribute="top" secondItem="oUx-tP-adx" secondAttribute="top" id="H6g-PJ-WeQ"/>
                     <constraint firstItem="5ua-rb-h0S" firstAttribute="top" secondItem="jEy-Wk-BoC" secondAttribute="top" id="HBQ-Vv-JZy"/>
-                    <constraint firstAttribute="trailing" secondItem="igT-H7-vgE" secondAttribute="trailing" constant="25" id="Icb-Yz-Taq"/>
+                    <constraint firstAttribute="trailing" secondItem="igT-H7-vgE" secondAttribute="trailing" constant="15" id="Icb-Yz-Taq"/>
                     <constraint firstItem="QJs-NM-ewf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="28" id="MNH-jM-Sh8"/>
                     <constraint firstItem="5ua-rb-h0S" firstAttribute="width" secondItem="jEy-Wk-BoC" secondAttribute="width" id="No2-iX-ccY"/>
                     <constraint firstItem="zI0-Ze-erR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="15" id="Nv9-Bs-sjm"/>
-                    <constraint firstAttribute="trailing" secondItem="DVm-Bo-eyA" secondAttribute="trailing" constant="30" id="OfQ-oz-qxZ"/>
+                    <constraint firstAttribute="trailing" secondItem="DVm-Bo-eyA" secondAttribute="trailing" constant="10" id="OfQ-oz-qxZ"/>
                     <constraint firstItem="5ua-rb-h0S" firstAttribute="height" secondItem="jEy-Wk-BoC" secondAttribute="height" id="Rqv-fW-PJa"/>
                     <constraint firstItem="jEy-Wk-BoC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UZ1-x4-ntG"/>
                     <constraint firstItem="oz0-mk-oeC" firstAttribute="leading" secondItem="QJs-NM-ewf" secondAttribute="leading" id="YV0-bk-Sal"/>
@@ -91,12 +93,13 @@
                     <constraint firstItem="igT-H7-vgE" firstAttribute="top" secondItem="5ws-Un-PvV" secondAttribute="bottom" constant="10" id="ZLM-G5-iDo"/>
                     <constraint firstItem="rr3-Bk-elY" firstAttribute="top" secondItem="5ua-rb-h0S" secondAttribute="top" id="buh-5H-FrM"/>
                     <constraint firstItem="5ws-Un-PvV" firstAttribute="top" secondItem="zI0-Ze-erR" secondAttribute="bottom" constant="20" id="cRL-CW-JPd"/>
+                    <constraint firstItem="DVm-Bo-eyA" firstAttribute="height" secondItem="oUx-tP-adx" secondAttribute="height" id="j9u-b0-zcc"/>
                     <constraint firstItem="rr3-Bk-elY" firstAttribute="height" secondItem="5ua-rb-h0S" secondAttribute="height" id="qvT-0B-h13"/>
                     <constraint firstAttribute="bottom" secondItem="jEy-Wk-BoC" secondAttribute="bottom" id="t8c-0W-hBx"/>
                     <constraint firstItem="rr3-Bk-elY" firstAttribute="leading" secondItem="5ua-rb-h0S" secondAttribute="trailing" id="u77-LB-Xfg"/>
                     <constraint firstAttribute="trailing" secondItem="rr3-Bk-elY" secondAttribute="trailing" id="xKe-ii-NNW"/>
                     <constraint firstItem="igT-H7-vgE" firstAttribute="leading" secondItem="5ws-Un-PvV" secondAttribute="leading" id="yMe-oQ-Sff"/>
-                    <constraint firstItem="zI0-Ze-erR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="25" id="yXn-e2-QpY"/>
+                    <constraint firstItem="zI0-Ze-erR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="yXn-e2-QpY"/>
                     <constraint firstItem="5ua-rb-h0S" firstAttribute="leading" secondItem="jEy-Wk-BoC" secondAttribute="trailing" id="zuE-v1-1Yf"/>
                 </constraints>
             </tableViewCellContentView>
