--- a/yizu/Home/HomeList/view/Home.storyboard
+++ b/yizu/Home/HomeList/view/Home.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="483" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nbO-IY-kKB" id="826-4h-n08">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D7Y-iN-1GP">
@@ -93,6 +93,12 @@
                                                 <constraint firstAttribute="width" constant="18" id="fTy-DW-RrQ"/>
                                             </constraints>
                                         </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距离" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S7q-9L-Iee">
+                                            <rect key="frame" x="331.5" y="33" width="20.5" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="D7Y-iN-1GP" firstAttribute="leading" secondItem="826-4h-n08" secondAttribute="leading" constant="23" id="1g9-Bz-BCW"/>
@@ -102,7 +108,9 @@
                                         <constraint firstItem="ClT-1l-4jW" firstAttribute="leading" secondItem="NQU-fk-eIz" secondAttribute="trailing" constant="8" id="8z0-qk-cdi"/>
                                         <constraint firstItem="D7Y-iN-1GP" firstAttribute="top" secondItem="drr-KL-ai3" secondAttribute="bottom" constant="10" id="9zk-Nl-yvY"/>
                                         <constraint firstItem="y4k-v4-SBs" firstAttribute="leading" secondItem="LXV-Em-5b1" secondAttribute="trailing" constant="3" id="AKy-bX-6cD"/>
+                                        <constraint firstItem="S7q-9L-Iee" firstAttribute="top" secondItem="qQe-ne-Qtf" secondAttribute="top" id="CC4-G0-KXO"/>
                                         <constraint firstItem="INl-lY-oH9" firstAttribute="trailing" secondItem="y4k-v4-SBs" secondAttribute="trailing" id="DJE-qE-Pog"/>
+                                        <constraint firstAttribute="trailing" secondItem="S7q-9L-Iee" secondAttribute="trailing" constant="23" id="EB9-xf-f4y"/>
                                         <constraint firstAttribute="trailing" secondItem="y4k-v4-SBs" secondAttribute="trailing" constant="23" id="GnK-ca-1Qk"/>
                                         <constraint firstItem="y4k-v4-SBs" firstAttribute="top" secondItem="LXV-Em-5b1" secondAttribute="top" id="Jgr-zj-TbO"/>
                                         <constraint firstItem="INl-lY-oH9" firstAttribute="leading" secondItem="D7Y-iN-1GP" secondAttribute="leading" id="NZp-GM-HJd"/>
@@ -124,6 +132,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="chamberjjLab" destination="INl-lY-oH9" id="GrK-aa-fX2"/>
+                                    <outlet property="distanceLab" destination="S7q-9L-Iee" id="DAq-D3-BqK"/>
                                     <outlet property="favBtn" destination="NQU-fk-eIz" id="xBj-8c-EAa"/>
                                     <outlet property="iconView" destination="drr-KL-ai3" id="XMF-WT-Vda"/>
                                     <outlet property="ima1" destination="D7Y-iN-1GP" id="FOI-oL-69J"/>
