行业列表页更改

--- a/yizu/Home/LoopImage/HomeCateGoryDetail/HomeCateDetailCell.xib
+++ b/yizu/Home/LoopImage/HomeCateGoryDetail/HomeCateDetailCell.xib
@@ -19,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qlU-fo-yg5">
-                        <rect key="frame" x="5" y="55" width="122" height="70.5"/>
+                        <rect key="frame" x="5" y="55" width="122" height="90.5"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kxI-9l-GQ0">
-                        <rect key="frame" x="126.5" y="55" width="122" height="70.5"/>
+                        <rect key="frame" x="126.5" y="55" width="122" height="90.5"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d7i-O1-y09">
-                        <rect key="frame" x="248.5" y="55" width="121.5" height="70.5"/>
+                        <rect key="frame" x="248.5" y="55" width="121.5" height="90.5"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6XE-K5-ChX">
                         <rect key="frame" x="10" y="20" width="30" height="30"/>
@@ -41,15 +41,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcn-JG-TR1">
-                        <rect key="frame" x="341.5" y="31.5" width="28.5" height="13.5"/>
+                        <rect key="frame" x="341.5" y="38.5" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="撒地方离开拘留所的克己复礼空间里的；萨科了解对方；萨科了解对方；萨科了解对方" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCK-AY-ykJ">
-                        <rect key="frame" x="10" y="134" width="355" height="35"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="撒地方离开拘留所的克己复礼空间里的；萨科了解" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCK-AY-ykJ">
+                        <rect key="frame" x="10" y="154" width="355" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="o7V-rO-rzd"/>
+                            <constraint firstAttribute="height" constant="15" id="o7V-rO-rzd"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -99,7 +99,7 @@
                     <constraint firstAttribute="bottom" secondItem="2sg-zo-q4Q" secondAttribute="bottom" id="JWq-oW-GCV"/>
                     <constraint firstItem="sIM-CK-jAj" firstAttribute="top" secondItem="6XE-K5-ChX" secondAttribute="top" id="Mdc-CU-YUW"/>
                     <constraint firstItem="XCK-AY-ykJ" firstAttribute="top" secondItem="qlU-fo-yg5" secondAttribute="bottom" constant="8" id="N5v-oT-pwR"/>
-                    <constraint firstItem="d7i-O1-y09" firstAttribute="top" secondItem="qcn-JG-TR1" secondAttribute="bottom" constant="10" id="Nr8-iR-JYA"/>
+                    <constraint firstItem="d7i-O1-y09" firstAttribute="top" secondItem="qcn-JG-TR1" secondAttribute="bottom" constant="3" id="Nr8-iR-JYA"/>
                     <constraint firstAttribute="trailing" secondItem="d7i-O1-y09" secondAttribute="trailing" constant="5" id="Oni-md-sdN"/>
                     <constraint firstItem="kxI-9l-GQ0" firstAttribute="leading" secondItem="qlU-fo-yg5" secondAttribute="trailing" id="Q2Q-sB-K0N"/>
                     <constraint firstAttribute="trailing" secondItem="2sg-zo-q4Q" secondAttribute="trailing" id="QLK-Ny-CLe"/>
