--- a/yizu/Base.lproj/LaunchScreen.storyboard
+++ b/yizu/Base.lproj/LaunchScreen.storyboard
@@ -21,22 +21,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mwc-tO-f6b">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StartPage" translatesAutoresizingMaskIntoConstraints="NO" id="mwc-tO-f6b">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-12-13全球首发" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVM-ME-Z2c">
+                                <rect key="frame" x="109" y="614" width="157" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.98834389448165894" green="0.054072449623514256" blue="0.095630454173352142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="mwc-tO-f6b" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="1d3-ev-0m4"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="cVM-ME-Z2c" secondAttribute="bottom" constant="32" id="EzY-po-8DM"/>
                             <constraint firstItem="mwc-tO-f6b" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="JuW-eI-9lB"/>
                             <constraint firstAttribute="trailing" secondItem="mwc-tO-f6b" secondAttribute="trailing" id="KU6-yG-suI"/>
+                            <constraint firstItem="cVM-ME-Z2c" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RVl-KN-thK"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="mwc-tO-f6b" secondAttribute="bottom" id="u6j-WD-iMa"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="StartPage" width="466" height="829"/>
+    </resources>
 </document>
